Fix: remove autofocus on editing custom snippet to use the automatic size of the frame on mobile devices

--- a/replacer-frontend/src/app/review/page/edit-custom-snippet.component.css
+++ b/replacer-frontend/src/app/review/page/edit-custom-snippet.component.css
@@ -3,9 +3,3 @@
   font-family: monospace;
   overflow: auto;
 }
-
-@media (max-width: 320px) {
-  .pre {
-    max-height: 60vh;
-  }
-}
